--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@ p.b {
 
 
   <div class="header" align='center'>
-    <a href="E:\deep\website\main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a class="active" href="E:\deep\website\main.html">Home</a>
-      <a href="E:\deep\website\biography.html">Biography</a>
-      <a href="E:\deep\website\gallery.html">Gallery</a>
-      <a href="E:\deep\website\films.html">Films</a>
-      <a href="E:\deep\website\contact.html">Contact</a>
+      <a class="active" href="raghuram16.github.io/index.html">Home</a>
+      <a href="raghuram16.github.io/biography.html">Biography</a>
+      <a href="raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="raghuram16.github.io/films.html">Films</a>
+      <a href="raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
@@ -247,17 +247,17 @@ p.b {
 <div align='center'>
   <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="E:\deep\website\img\6.jpg" style="width:60%">
+    <img src="raghuram16.github.io/img/6.jpg" style="width:60%">
     <!-- <div class="text">Caption Text</div> -->
   </div>
 
   <div class="mySlides fade">
-    <img src="E:\deep\website\img\8.jpg" style="width:60%">
+    <img src="raghuram16.github.io/img/8.jpg" style="width:60%">
     <!-- <div class="text">Caption Two</div> -->
   </div>
 
   <div class="mySlides fade">
-    <img src="E:\deep\website\img\5.jpg" style="width:60%">
+    <img src="raghuram16.github.io/img/5.jpg" style="width:60%">
     <!-- <div class="text">Caption Three</div> -->
   </div>
   </div>
