--- a/biography.html
+++ b/biography.html
@@ -140,21 +140,21 @@ img {
 
 
   <div class="header" align='center'>
-    <a href="E:\deep\website\main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="E:\deep\website\main.html">Home</a>
-      <a class="active" href="E:\deep\website\biography.html">Biography</a>
-      <a href="E:\deep\website\gallery.html">Gallery</a>
-      <a href="E:\deep\website\films.html">Films</a>
-      <a href="E:\deep\website\contact.html">Contact</a>
+      <a href="raghuram16.github.io/index.html">Home</a>
+      <a class="active" href="raghuram16.github.io/biography.html">Biography</a>
+      <a href="raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="raghuram16.github.io/films.html">Films</a>
+      <a href="raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
   <br>
 
   <div class="header">
-  <img align='Right' src="E:\deep\website\img\30.jpg" style="width:60%">
+  <img align='Right' src="raghuram16.github.io/img/30.jpg" style="width:60%">
   </dev>
 
 <br>
