--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+raghuram16.github.io/index<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>RaghuRam</title>
@@ -159,14 +159,14 @@ p.b {
 
 
   <div class="header" align='center'>
-    <a href="E:\deep\website\main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="E:\deep\website\main.html">Home</a>
-      <a href="E:\deep\website\biography.html">Biography</a>
-      <a class="active" href="E:\deep\website\gallery.html">Gallery</a>
-      <a href="E:\deep\website\films.html">Films</a>
-      <a href="E:\deep\website\contact.html">Contact</a>
+      <a href="raghuram16.github.io/index.html">Home</a>
+      <a href="raghuram16.github.io/biography.html">Biography</a>
+      <a class="active" href="raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="raghuram16.github.io/films.html">Films</a>
+      <a href="raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
@@ -177,10 +177,10 @@ p.b {
 <br>
 
 <div class="header" align='center'>
-<img src="E:\deep\website\img\12.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
-<img src="E:\deep\website\img\10.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
-<img src="E:\deep\website\img\13.jpeg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
-<img src="E:\deep\website\img\28.jpg" frameborder="5" allowfullscreen width="470" height="510"></iframe>
+<img src="raghuram16.github.io/img/12.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
+<img src="raghuram16.github.io/img/10.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
+<img src="raghuram16.github.io/img/13.jpeg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
+<img src="raghuram16.github.io/img/28.jpg" frameborder="5" allowfullscreen width="470" height="510"></iframe>
 
 </div>
 
