--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@ p.b {
     <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a class="active" href="raghuram16.github.io/index.html">Home</a>
-      <a href="raghuram16.github.io/biography.html">Biography</a>
-      <a href="raghuram16.github.io/gallery.html">Gallery</a>
-      <a href="raghuram16.github.io/films.html">Films</a>
-      <a href="raghuram16.github.io/contact.html">Contact</a>
+      <a class="active" href="https://raghuram16.github.io/index.html">Home</a>
+      <a href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
@@ -247,17 +247,17 @@ p.b {
 <div align='center'>
   <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="raghuram16.github.io/img/6.jpg" style="width:60%">
+    <img src="https://raghuram16.github.io/img/6.jpg" style="width:60%">
     <!-- <div class="text">Caption Text</div> -->
   </div>
 
   <div class="mySlides fade">
-    <img src="raghuram16.github.io/img/8.jpg" style="width:60%">
+    <img src="https://raghuram16.github.io/img/8.jpg" style="width:60%">
     <!-- <div class="text">Caption Two</div> -->
   </div>
 
   <div class="mySlides fade">
-    <img src="raghuram16.github.io/img/5.jpg" style="width:60%">
+    <img src="https://raghuram16.github.io/img/5.jpg" style="width:60%">
     <!-- <div class="text">Caption Three</div> -->
   </div>
   </div>
@@ -269,17 +269,6 @@ p.b {
     <span class="dot"></span>
   </div>
 
-<div class="link">
-
-
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-google"></a>
-<a href="#" class="fa fa-linkedin"></a>
-<a href="#" class="fa fa-youtube"></a>
-<a href="#" class="fa fa-instagram"></a>
-
-</div>
 
 
 <script>
