--- a/gallery.html
+++ b/gallery.html
@@ -162,11 +162,11 @@ p.b {
     <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="raghuram16.github.io/index.html">Home</a>
-      <a href="raghuram16.github.io/biography.html">Biography</a>
-      <a class="active" href="raghuram16.github.io/gallery.html">Gallery</a>
-      <a href="raghuram16.github.io/films.html">Films</a>
-      <a href="raghuram16.github.io/contact.html">Contact</a>
+      <a href="https://raghuram16.github.io/index.html">Home</a>
+      <a href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a class="active" href="https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
@@ -177,10 +177,10 @@ p.b {
 <br>
 
 <div class="header" align='center'>
-<img src="raghuram16.github.io/img/12.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
-<img src="raghuram16.github.io/img/10.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
-<img src="raghuram16.github.io/img/13.jpeg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
-<img src="raghuram16.github.io/img/28.jpg" frameborder="5" allowfullscreen width="470" height="510"></iframe>
+<img src="https://raghuram16.github.io/img/12.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
+<img src="https://raghuram16.github.io/img/10.jpg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
+<img src="https://raghuram16.github.io/img/13.jpeg" frameborder="5" allowfullscreen width="470" height="500"></iframe>
+<img src="https://raghuram16.github.io/img/28.jpg" frameborder="5" allowfullscreen width="470" height="510"></iframe>
 
 </div>
 
