--- a/films.html
+++ b/films.html
@@ -209,7 +209,7 @@ body {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="raghuram16.github.io/img/1.jpg" alt="Jane" style="width:100%">
+      <img src="https://https://raghuram16.github.io/img/1.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">CEO & Founder</p>
@@ -222,7 +222,7 @@ body {
 
   <div class="column">
     <div class="card">
-      <img src="raghuram16.github.io/img/5.jpg" alt="Mike" style="width:100%">
+      <img src="https://https://raghuram16.github.io/img/5.jpg" alt="Mike" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">Art Director</p>
@@ -235,7 +235,7 @@ body {
 
   <div class="column">
     <div class="card">
-      <img src="raghuram16.github.io/img/4.png" alt="John" style="width:100%">
+      <img src="https://https://raghuram16.github.io/img/4.png" alt="John" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">Designer</p>
@@ -251,19 +251,19 @@ body {
   <ul>
 
     <li style="font-family:'Courier New'"><h2>Kadhal Kasakudhaiya</h2>
-      <iframe src="raghuram16.github.io/vid/1.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
+      <iframe src="https://raghuram16.github.io/vid/1.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
     </li>
 
     <li style="font-family:'Courier New'"><h2>Kodai Kaala Kaatre</h2>
-      <iframe src="raghuram16.github.io/vid/2.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
+      <iframe src="https://raghuram16.github.io/vid/2.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
     </li>
 
     <li style="font-family:'Courier New'"><h2>Thaen Mittai</h2>
-      <iframe src="raghuram16.github.io/vid/3.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
+      <iframe src="https://raghuram16.github.io/vid/3.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
     </li>
 
     <li style="font-family:'Courier New'"><h2>Unai Piriyean</h2>
-      <iframe src="raghuram16.github.io/vid/4.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
+      <iframe src="https://raghuram16.github.io/vid/4.mp4" frameborder="5" allowfullscreen width="480" height="345"></iframe>
     </li>
 
   </ul>
