--- a/biography.html
+++ b/biography.html
@@ -143,18 +143,18 @@ img {
     <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="raghuram16.github.io/index.html">Home</a>
-      <a class="active" href="raghuram16.github.io/biography.html">Biography</a>
-      <a href="raghuram16.github.io/gallery.html">Gallery</a>
-      <a href="raghuram16.github.io/films.html">Films</a>
-      <a href="raghuram16.github.io/contact.html">Contact</a>
+      <a href="https://raghuram16.github.io/index.html">Home</a>
+      <a class="active" href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
   <br>
 
   <div class="header">
-  <img align='Right' src="raghuram16.github.io/img/30.jpg" style="width:60%">
+  <img align='Right' src="https://raghuram16.github.io/img/30.jpg" style="width:60%">
   </dev>
 
 <br>
