--- a/films.html
+++ b/films.html
@@ -1,208 +1,156 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>RaghuRam</title>
+<meta charset="UTF-8">
+
+<link rel="stylesheet" href="/w3css/3/w3.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+
+ * {box-sizing: border-box;}
+ body {font-family: Verdana, sans-serif;}
+ .mySlides {display: none;}
+ img {vertical-align: middle;}
+
+ .active {
+   background-color: #717171;
+ }
+
+ * {box-sizing: border-box;}
+
+ body {
+   margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
+   background-color: #030303;
+ }
+ iframe {
+   margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
+   background-color: #B7BDBA;
+ }
+ h3 {
+   margin: 0;
+   font-family: "Lucida Console", "Courier New", monospace;
+   background-color: #E6EAE8;
+   padding: 25px;
+   width: 330px;
+   height: 600px;
+ }
+
+ .header {
+   overflow: hidden;
+   background-color: #030303;
+   padding: 20px 10px;
+   max-width: 1000px;
+   position: relative;
+   margin: auto;
+   top:0;
+ }
+
+ .header a {
+   float: left;
+   color: #BFFDC6;
+   text-align: center;
+   padding: 12px;
+   text-decoration: none;
+   font-size: 18px;
+   line-height: 25px;
+   border-radius: 4px;
+
+ }
+
+ .header a.logo {
+   font-size: 25px;
+   font-weight: bold;
+   font-color: #BFFDC6;
+   text-align: left;
+   left:0;
+ }
+
+ .header a:hover {
+   background-color: #ddd;
+   color: black;
+ }
+
+ .header a.active {
+   background-color: dodgerblue;
+   color: white;
+   text-align: left;
+ }
+
+ .header-right {
+   float: right;
+
+   position:relative;
+   top:0px;
+   right:50;
+ }
+
+ .header-left {
+   float: left;
+
+   position:relative;
+   top:80;
+   right:0;
+ }
+
+
+
+ @media screen and (max-width: 500px) {
+   .header a {
+     float: none;
+     display: block;
+     text-align: left;
+     font-style: italic,monospace;
+
+   }
+
+   .header-right {
+     float: none;
+     font-style: italic,monospace;
+   }
+ }
+
+
+p.b {
+
+  font-family: "Lucida Console", "Courier New", monospace;
 }
-
-html {
-  box-sizing: border-box;
+/* #content {
+    position: relative;
 }
+#content img {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+} */
 
-*, *:before, *:after {
-  box-sizing: inherit;
+img {
+  top: 0px;
+  right: 0px;
 }
-
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-}
-
-.about-section {
-  padding: 50px;
-  text-align: center;
-  background-color: #474e5d;
-  color: white;
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: grey;
-}
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
-}
-
-ul {
-  display: table-row
-}
-
-li {
-  display: table-cell
-}
-
-iframe {
-  display: block;
-}
-
-h1 {
-  font-size: 40px;
-}
-
-h2 {
-  font-size: 30px;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-/* Right-aligned link */
-.navbar a.right {
-  float: right;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-* {box-sizing: border-box;}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header {
-  overflow: hidden;
-  background-color: #030303;
-  padding: 20px 10px;
-}
-
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-  font-color: #BFFDC6;
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.header-right {
-  float: right;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header-right {
-    float: none;
-  }
-}
-
 
 </style>
 </head>
 <body>
 
-<div class="about-section">
-  <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
-</div>
 
-<div class="navbar">
-  <a href="E:\deep\website\about.html">About</a>
-  <a href="E:\deep\website\achievement.html">Achievement</a>
-  <a href="E:\deep\website\contact.html">Contact</a>
+ font-family: "Lucida Console", "Courier New", monospace;
 
-</div>
 
-<div class="header">
-  <a href="#default" class="logo"><p class="b">RaghuRaman <br> Actor, Chennain IN </p> </a>
-
-  <div class="header-right">
-    <a  href="E:\deep\website\main.html">Home</a>
-    <a class="active" href="E:\deep\website\about.html">About</a>
-    <a  href="E:\deep\website\contact.html">Contact</a>
-
+  <div class="header" align='center'>
+    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <div class="header-right">
+      <h6>
+      <a href="https://raghuram16.github.io/index.html">Home</a>
+      <a class="active" href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a href="https://raghuram16.github.io/contact.html">Contact</a>
+    </h6>
+    </div>
   </div>
-</div>
 
 
 <h2 style="text-align:center">Our Team</h2>
