--- a/films.html
+++ b/films.html
@@ -144,9 +144,9 @@ img {
     <div class="header-right">
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
-      <a class="active" href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a href="https://raghuram16.github.io/biography.html">Biography</a>
       <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
-      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a class="active" href="https://raghuram16.github.io/films.html">Films</a>
       <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
