--- a/biography.html
+++ b/biography.html
@@ -154,7 +154,7 @@ img {
   <br>
 
   <div class="header">
-  <img align='Right' src="https://raghuram16.github.io/img/30.jpg" style="width:60%">
+  <img align='Right' src="https://raghuram16.github.io/img/30.JPG" style="width:60%">
   </dev>
 
 <br>
