--- a/index.html
+++ b/index.html
@@ -247,17 +247,17 @@ p.b {
 <div align='center'>
   <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="https://raghuram16.github.io/img/6.jpg" style="width:60%">
+    <img src="https://raghuram16.github.io/img/6.JPG" style="width:60%">
     <!-- <div class="text">Caption Text</div> -->
   </div>
 
   <div class="mySlides fade">
-    <img src="https://raghuram16.github.io/img/8.jpg" style="width:60%">
+    <img src="https://raghuram16.github.io/img/8.JPG" style="width:60%">
     <!-- <div class="text">Caption Two</div> -->
   </div>
 
   <div class="mySlides fade">
-    <img src="https://raghuram16.github.io/img/5.jpg" style="width:60%">
+    <img src="https://raghuram16.github.io/img/5.JPG" style="width:60%">
     <!-- <div class="text">Caption Three</div> -->
   </div>
   </div>
