--- a/films.html
+++ b/films.html
@@ -170,7 +170,7 @@ img {
 
   <div class="column">
     <div class="card">
-      <img src="https://https://raghuram16.github.io/img/5.jpg" alt="Mike" style="width:100%">
+      <img src="https://https://raghuram16.github.io/img/5.JPG" alt="Mike" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">Art Director</p>
