--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ p.b {
 
 
   <div class="header" align='center'>
-    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
       <a class="active" href="https://raghuram16.github.io/index.html">Home</a>
