--- a/films.html
+++ b/films.html
@@ -157,7 +157,7 @@ img {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://https://raghuram16.github.io/img/1.jpg" alt="Jane" style="width:100%">
+      <img src="https://raghuram16.github.io/img/1.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">CEO & Founder</p>
@@ -170,7 +170,7 @@ img {
 
   <div class="column">
     <div class="card">
-      <img src="https://https://raghuram16.github.io/img/5.JPG" alt="Mike" style="width:100%">
+      <img src="https://raghuram16.github.io/img/5.JPG" alt="Mike" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">Art Director</p>
@@ -183,7 +183,7 @@ img {
 
   <div class="column">
     <div class="card">
-      <img src="https://https://raghuram16.github.io/img/4.png" alt="John" style="width:100%">
+      <img src="https://raghuram16.github.io/img/4.png" alt="John" style="width:100%">
       <div class="container">
         <h2>RaghuRaman</h2>
         <p class="title">Designer</p>
