--- a/films.html
+++ b/films.html
@@ -29,6 +29,20 @@
    font-family: Arial, Helvetica, sans-serif;
    background-color: #B7BDBA;
  }
+   .t {
+    display: table;
+    width: 100%;
+    height: auto;
+  }
+
+  ul {
+    display: table-row
+  }
+
+  li {
+    display: table-cell
+  }
+
  h3 {
    margin: 0;
    font-family: "Lucida Console", "Courier New", monospace;
