--- a/films.html
+++ b/films.html
@@ -36,11 +36,12 @@
   }
 
   ul {
-    display: table-row
+    display: table-row;
   }
 
   li {
-    display: table-cell
+    display: table-cell;
+    font-color: #BFFDC6;
   }
 
  h3 {
