--- a/films.html
+++ b/films.html
@@ -167,7 +167,7 @@ img {
     </div>
   </div>
 
-
+<div class="header" align='center'>
 <h2 style="text-align:center">Our Team</h2>
 <div class="row">
   <div class="column">
@@ -208,6 +208,7 @@ img {
       </div>
     </div>
   </div>
+</div>
 </div>
 
 <div class="t">
