--- a/films.html
+++ b/films.html
@@ -170,25 +170,14 @@ img {
 <div class="header" align='center'>
 <h2 style="text-align:center">Our Team</h2>
 <div class="row">
-  <div class="column">
-    <div class="card">
-      <img src="https://raghuram16.github.io/img/1.jpg" alt="Jane" style="width:50%">
-      <div class="container">
-        <h2>RaghuRaman</h2>
-        <p class="title">CEO & Founder</p>
-        <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>jane@example.com</p>
-        <p><button class="button">Contact</button></p> -->
-      </div>
-    </div>
-  </div>
+
 
   <div class="column">
     <div class="card">
       <img src="https://raghuram16.github.io/img/5.JPG" alt="Mike" style="width:56%">
       <div class="container">
         <h2>RaghuRaman</h2>
-        <p class="title">Art Director</p>
+        <p style= "color:blue" class="title">CEO & Founder</p>
         <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>mike@example.com</p>
         <p><button class="button">Contact</button></p> -->
@@ -201,7 +190,7 @@ img {
       <img src="https://raghuram16.github.io/img/4.png" alt="John" style="width:50%">
       <div class="container">
         <h2>RaghuRaman</h2>
-        <p class="title">Designer</p>
+        <p style= "color:blue" class="title">Editor</p>
         <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>john@example.com</p>
         <p><button class="button">Contact</button></p> -->
