--- a/films.html
+++ b/films.html
@@ -176,8 +176,7 @@ img {
     <div class="card">
       <img src="https://raghuram16.github.io/img/5.JPG" alt="Mike" style="width:56%">
       <div class="container">
-        <h2>RaghuRaman</h2>
-        <p style= "color:blue" class="title">CEO & Founder</p>
+        
         <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>mike@example.com</p>
         <p><button class="button">Contact</button></p> -->
@@ -189,7 +188,8 @@ img {
     <div class="card">
       <img src="https://raghuram16.github.io/img/4.png" alt="John" style="width:50%">
       <div class="container">
-        <h2>RaghuRaman</h2>
+        <h2 style= "color:red">RaghuRaman</h2>
+        <p style= "color:blue" class="title">CEO & Founder</p>
         <p style= "color:blue" class="title">Editor</p>
         <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>john@example.com</p>
