--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,194 @@
-w
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>RaghuRam</title>
+<meta charset="UTF-8">
+
+<link rel="stylesheet" href="/w3css/3/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+
+* {box-sizing: border-box;}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #030303;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #030303;
+  padding: 20px 10px;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  top:0;
+}
+
+.header a {
+  float: left;
+  color: #BFFDC6;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  font-color: #BFFDC6;
+  text-align: left;
+  left:0;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+  text-align: right;
+}
+
+.header-right {
+  float: right;
+  position:relative;
+
+  right:152px;
+}
+
+.header-left {
+  float: left;
+
+  position:relative;
+  top:80;
+  right:0;
+}
+
+
+.link {
+  float: right;
+
+  position:relative;
+  top:0px;
+  right:750px;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+    font-style: italic,monospace;
+
+  }
+
+  .header-left {
+    float: right;
+
+    position:relative;
+    top:80px;
+    right:1px;
+  }
+}
+
+
+
+p.b {
+
+ font-family: "Lucida Console", "Courier New", monospace;
+}
+
+.table-right {
+  float: right;
+  position:relative;
+
+  right:118px;
+}
+.copyright {
+  float: left;
+  position:relative;
+  bottom:0px;
+  left:0px;
+}
+
+
+p.copyright {
+    position: relative;
+    width: 100%;
+    color: #fff;
+    line-height: 40px;
+    font-size: 0.65em;
+    text-align: left;
+    bottom:0;
+}
+
+</style>
+</head>
+<body>
+
+
+
+  <div class="header" align='center'>
+    <a href=""https://raghuram16.github.io/main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <div class="header-right">
+      <h6>
+      <a href=""https://raghuram16.github.io/main.html">Home</a>
+      <a href=""https://raghuram16.github.io/biography.html">Biography</a>
+      <a href=""https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href=""https://raghuram16.github.io/films.html">Films</a>
+      <a class="active" href=""https://raghuram16.github.io/contact.html">Contact</a>
+    </h6>
+    </div>
+  </div>
+
+
+  <div class="header">
+  <img align='left' src=""https://raghuram16.github.io/img/30.jpg" style="width:40%">
+
+  </dev>
+
+  <div style="color:red" class="header" align='center'>
+    <h2 style="color:#27B1BC"> Contact Me </h2>
+    <h2 style="color:white"> RaghuRam  </h2>
+    <h2 style="color:#27B1BC"> CEO & Founder  </h2>
+   <h2 style="color:#27B1BC"> of  </h2>
+
+
+  <table style="color:red" style="width:100%" class='table-right'>
+    <tr>
+      <td><a style="color:#27B1BC" href = "https://www.youtube.com/channel/UCJIbGYE6TsyLz_6uDbClRPw">Aathman Production</a></td>
+    </tr>
+
+
+    <tr>
+      <th><a href="tel:+91 97903 66650">+91 97903 66650</a></th>
+
+    </tr>
+    <tr>
+      <td><a href = "mailto:raghu94raaman@gmail.com?subject = Feedback&body = Message">raghu94raaman@gmail.com</a></td>
+    </tr>
+
+    <tr>
+      <td><a href = "https://raghuram16.github.io/">RaghuRam.com</a></td>
+    </tr>
+
+  </table>
+  </div>
+  <!-- <h2 class="copyright" style="color:red">The copyright symbol: &copy;</h2> -->
+
+
+<p class="copyright">© 2022 by RaghuRaman. Proudly created by Ragadeep</p>
+
+
+</body>
+
+</html>
