--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@ p.copyright {
 
 
   <div class="header">
-  <img align='left' src=""https://raghuram16.github.io/img/30.jpg" style="width:40%">
+  <img align='left' src=""https://raghuram16.github.io/img/30.JPG" style="width:40%">
 
   </dev>
 
