--- a/contact.html
+++ b/contact.html
@@ -138,21 +138,21 @@ p.copyright {
 
 
   <div class="header" align='center'>
-    <a href=""https://raghuram16.github.io/main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href=""https://raghuram16.github.io/main.html">Home</a>
-      <a href=""https://raghuram16.github.io/biography.html">Biography</a>
-      <a href=""https://raghuram16.github.io/gallery.html">Gallery</a>
-      <a href=""https://raghuram16.github.io/films.html">Films</a>
-      <a class="active" href=""https://raghuram16.github.io/contact.html">Contact</a>
+      <a href="https://raghuram16.github.io/main.html">Home</a>
+      <a href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a class="active" href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
 
 
   <div class="header">
-  <img align='left' src=""https://raghuram16.github.io/img/30.JPG" style="width:40%">
+  <img align='left' src="https://raghuram16.github.io/img/30.JPG" style="width:40%">
 
   </dev>
 
