--- a/contact.html
+++ b/contact.html
@@ -138,10 +138,10 @@ p.copyright {
 
 
   <div class="header" align='center'>
-    <a href="https://raghuram16.github.io/main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="https://raghuram16.github.io/main.html">Home</a>
+      <a href="https://raghuram16.github.io/index.html">Home</a>
       <a href="https://raghuram16.github.io/biography.html">Biography</a>
       <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
       <a href="https://raghuram16.github.io/films.html">Films</a>
