--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@ body {
   right:750px;
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   .header a {
     float: none;
     display: block;
@@ -90,6 +90,12 @@ body {
     font-style: italic,monospace;
 
   }
+   */
+.page-wrap { width: 80%; }
+
+@media (max-width: 600px) {
+  .resp .page-wrap { width: 100%; }
+}
 
   .header-left {
     float: right;
