--- a/gallery.html
+++ b/gallery.html
@@ -126,7 +126,7 @@ raghuram16.github.io/index<!DOCTYPE html>
 
    position:relative;
    top:0px;
-   right:50;
+   right:0px;
  }
 
  @media screen and (max-width: 500px) {
