--- a/biography.html
+++ b/biography.html
@@ -84,15 +84,14 @@
 
    position:relative;
    top:0px;
-   right:50;
+   right:0px;
  }
 
  .header-left {
    float: left;
-
    position:relative;
-   top:80;
-   right:0;
+   top:0px;
+   left:0px;
  }
 
 
@@ -127,8 +126,10 @@ p.b {
 } */
 
 img {
+  float: center;
+  position:relative;
   top: 0px;
-  right: 0px;
+
 }
 
 </style>
@@ -140,22 +141,20 @@ img {
 
 
   <div class="header" align='center'>
-    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="E:\deep\website\main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="https://raghuram16.github.io/index.html">Home</a>
-      <a class="active" href="https://raghuram16.github.io/biography.html">Biography</a>
-      <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
-      <a href="https://raghuram16.github.io/films.html">Films</a>
-      <a href="https://raghuram16.github.io/contact.html">Contact</a>
+      <a href="E:\deep\website\main.html">Home</a>
+      <a class="active" href="E:\deep\website\biography.html">Biography</a>
+      <a href="E:\deep\website\gallery.html">Gallery</a>
+      <a href="E:\deep\website\films.html">Films</a>
+      <a href="E:\deep\website\contact.html">Contact</a>
     </h6>
     </div>
   </div>
   <br>
 
-  <div class="header">
-  <img align='Right' src="https://raghuram16.github.io/img/30.JPG" style="width:60%">
-  </dev>
+
 
 <br>
 <br>
@@ -171,7 +170,7 @@ acting to the screen." width="30%" height="525">
 </iframe> -->
 
 
-<div class="header-left">
+<div align='center'>
 
 <h3 > Raghu Raman is a Tamil Actor specializing in wearing his heart on his sleeve
 and braving the unknown. As a performer, he is widely dedicated to being in the moment,
@@ -180,11 +179,11 @@ with B.Tech, and shortly after headed for acting. With a strong background and p
 provocative and beloved youtube channels- Madras Central. He has acted in numerous shows for the company. Recently Raghu took his passion for
 acting to the screen.
 </h3>
-
-
 </dev>
 
-
+<div >
+<img  src="E:\deep\website\img\30.jpg" style="width:60%">
+</dev>
 
 
 <script>
