--- a/biography.html
+++ b/biography.html
@@ -141,14 +141,14 @@ img {
 
 
   <div class="header" align='center'>
-    <a href="E:\deep\website\main.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
-      <a href="E:\deep\website\main.html">Home</a>
-      <a class="active" href="E:\deep\website\biography.html">Biography</a>
-      <a href="E:\deep\website\gallery.html">Gallery</a>
-      <a href="E:\deep\website\films.html">Films</a>
-      <a href="E:\deep\website\contact.html">Contact</a>
+      <a href="https://raghuram16.github.io/index.html">Home</a>
+      <a class="active" href="https://raghuram16.github.io/biography.html">Biography</a>
+      <a href="https://raghuram16.github.io/gallery.html">Gallery</a>
+      <a href="https://raghuram16.github.io/films.html">Films</a>
+      <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
     </div>
   </div>
@@ -160,14 +160,6 @@ img {
 <br>
 <br>
 <br>
-
-<!-- <iframe srcdoc= "Raghu Raman is a Tamil Actor specializing in wearing his heart on his sleeve
-and braving the unknown. As a performer, he is widely dedicated to being in the moment,
-always ready for whatever is coming next. Originally from Puducherry, IN, Raghu graduated from the University of Pondicherry
-with B.Tech, and shortly after headed for acting. With a strong background and passion for acting, Raghu found a home on one of Chennai's most
-provocative and beloved youtube channels- Madras Central. He has acted in numerous shows for the company. Recently Raghu took his passion for
-acting to the screen." width="30%" height="525">
-</iframe> -->
 
 
 <div align='center'>
@@ -182,13 +174,10 @@ acting to the screen.
 </dev>
 
 <div >
-<img  src="E:\deep\website\img\30.jpg" style="width:60%">
+<img  src="https://raghuram16.github.io/img/30.jpg" style="width:60%">
 </dev>
 
 
-<script>
-
-</script>
 
 
 </body>
