--- a/biography.html
+++ b/biography.html
@@ -174,7 +174,7 @@ acting to the screen.
 </dev>
 
 <div >
-<img  src="https://raghuram16.github.io/img/30.jpg" style="width:60%">
+<img  src="https://raghuram16.github.io/img/30.JPG" style="width:60%">
 </dev>
 
 
