--- a/index.html
+++ b/index.html
@@ -213,11 +213,18 @@
    }
  }
 
+ p.a {
+
+   font-family: URW Chancery L, cursive;
+   font-size: 24px;
+ }
 
 p.b {
 
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: OCR A Std, monospace;
+  font-size: 20px;
 }
+
 
 </style>
 </head>
@@ -228,7 +235,7 @@ p.b {
 
 
   <div class="header" align='center'>
-    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
       <a class="active" href="https://raghuram16.github.io/index.html">Home</a>
