--- a/gallery.html
+++ b/gallery.html
@@ -144,10 +144,16 @@ raghuram16.github.io/index<!DOCTYPE html>
    }
  }
 
+ p.a {
+
+   font-family: URW Chancery L, cursive;
+   font-size: 24px;
+ }
 
 p.b {
 
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: OCR A Std, monospace;
+  font-size: 20px;
 }
 
 </style>
@@ -159,8 +165,9 @@ p.b {
 
 
   <div class="header" align='center'>
-    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="raghuram16.github.io/index.html" class="logo"><p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
     <div class="header-right">
+     <i>
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
       <a href="https://raghuram16.github.io/biography.html">Biography</a>
@@ -168,6 +175,7 @@ p.b {
       <a href="https://raghuram16.github.io/films.html">Films</a>
       <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
+    </i>
     </div>
   </div>
 
