--- a/films.html
+++ b/films.html
@@ -127,11 +127,18 @@
    }
  }
 
+ p.a {
+
+   font-family: URW Chancery L, cursive;
+   font-size: 24px;
+ }
 
 p.b {
 
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: OCR A Std, monospace;
+  font-size: 20px;
 }
+ 
 /* #content {
     position: relative;
 }
@@ -155,8 +162,9 @@ img {
 
 
   <div class="header" align='center'>
-    <a href="raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="raghuram16.github.io/index.html" class="logo"> <p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
     <div class="header-right">
+     <i>
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
       <a href="https://raghuram16.github.io/biography.html">Biography</a>
@@ -164,6 +172,7 @@ img {
       <a class="active" href="https://raghuram16.github.io/films.html">Films</a>
       <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
+     </i>
     </div>
   </div>
 
