--- a/contact.html
+++ b/contact.html
@@ -119,12 +119,18 @@ body {
   }
 }
 
+ p.a {
 
+   font-family: URW Chancery L, cursive;
+   font-size: 24px;
+ }
 
 p.b {
 
- font-family: "Lucida Console", "Courier New", monospace;
+  font-family: OCR A Std, monospace;
+  font-size: 20px;
 }
+
 
 .table-right {
   float: right;
@@ -157,7 +163,7 @@ p.copyright {
 
 
   <div class="header" align='center'>
-    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"> <p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
     <div class="header-right">
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
