--- a/biography.html
+++ b/biography.html
@@ -50,7 +50,7 @@
 
  .header a {
    float: left;
-   color: #BFFDC6;
+   color: white;
    text-align: center;
    padding: 12px;
    text-decoration: none;
@@ -111,14 +111,23 @@
    }
  }
 
+ p.a {
+
+   font-family: URW Chancery L, cursive;
+   font-size: 24px;
+ }
 
 p.b {
 
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: OCR A Std, monospace;
+  font-size: 20px;
 }
-/* #content {
-    position: relative;
+
+h3 {
+  background-color: #FDE5BF ;
+
 }
+ 
 #content img {
     position: absolute;
     top: 0px;
@@ -141,8 +150,9 @@ img {
 
 
   <div class="header" align='center'>
-    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="b">RaghuRaman <br> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"> <p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
     <div class="header-right">
+     <i>
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
       <a class="active" href="https://raghuram16.github.io/biography.html">Biography</a>
@@ -150,6 +160,7 @@ img {
       <a href="https://raghuram16.github.io/films.html">Films</a>
       <a href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
+     </i>
     </div>
   </div>
   <br>
