--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ body {
 
 .header a {
   float: left;
-  color: #BFFDC6;
+  color: white;
   text-align: center;
   padding: 12px;
   text-decoration: none;
