--- a/films.html
+++ b/films.html
@@ -65,7 +65,7 @@
 
  .header a {
    float: left;
-   color: #BFFDC6;
+   color: white;
    text-align: center;
    padding: 12px;
    text-decoration: none;
