--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@ raghuram16.github.io/index<!DOCTYPE html>
 
  .header a {
    float: left;
-   color: #BFFDC6;
+   color: white;
    text-align: center;
    padding: 12px;
    text-decoration: none;
