--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
  .header a {
    float: left;
-   color: #BFFDC6;
+   color: white;
    text-align: center;
    padding: 12px;
    text-decoration: none;
