--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
    font-weight: bold;
    font-color: #BFFDC6;
    text-align: left;
+   line-height : 5px;
    left:0;
  }
 
@@ -235,7 +236,7 @@ p.b {
 
 
   <div class="header" align='center'>
-    <a href="https://raghuram16.github.io/index.html" class="logo"><p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
+    <a href="https://raghuram16.github.io/index.html" class="logo"> <p class="a">RaghuRaman </p> <p class="b"> Actor  Chennai IN </p>  </a>
     <div class="header-right">
       <i>
       <h6>
