--- a/gallery.html
+++ b/gallery.html
@@ -107,6 +107,7 @@ raghuram16.github.io/index<!DOCTYPE html>
    font-weight: bold;
    font-color: #BFFDC6;
    text-align: left;
+   line-height : 5px;
    left:0;
  }
 
@@ -166,7 +167,7 @@ p.b {
 
   <div class="header" align='center'>
     <a href="raghuram16.github.io/index.html" class="logo"><p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
-    <div class="header-right">
+    <div class="header-right">          
      <i>
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
