--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@ body {
   font-weight: bold;
   font-color: #BFFDC6;
   text-align: left;
+  line-height : 5px;
   left:0;
 }
 
@@ -62,7 +63,7 @@ body {
   float: right;
   position:relative;
 
-  right:152px;
+  right:0px;
 }
 
 .header-left {
@@ -165,6 +166,7 @@ p.copyright {
   <div class="header" align='center'>
     <a href="https://raghuram16.github.io/index.html" class="logo"> <p class="a">RaghuRaman </p><p class="b"> Actor  Chennai IN </p> </a>
     <div class="header-right">
+      <i>
       <h6>
       <a href="https://raghuram16.github.io/index.html">Home</a>
       <a href="https://raghuram16.github.io/biography.html">Biography</a>
@@ -172,6 +174,7 @@ p.copyright {
       <a href="https://raghuram16.github.io/films.html">Films</a>
       <a class="active" href="https://raghuram16.github.io/contact.html">Contact</a>
     </h6>
+      </i>
     </div>
   </div>
 
