--- a/contact.html
+++ b/contact.html
@@ -56,23 +56,24 @@ body {
 .header a.active {
   background-color: dodgerblue;
   color: white;
-  text-align: right;
+  text-align: left;
 }
 
 .header-right {
   float: right;
-  position:relative;
 
+  position:relative;
+  top:0px;
   right:0px;
 }
 
 .header-left {
   float: left;
-
   position:relative;
-  top:80;
-  right:0;
+  top:0px;
+  left:0px;
 }
+
 
 
 .link {
@@ -133,12 +134,6 @@ p.b {
 }
 
 
-.table-right {
-  float: right;
-  position:relative;
-
-  right:118px;
-}
 .copyright {
   float: left;
   position:relative;
